--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
-            <button><img src="images/search.png"></button>
+            <button><img src="images/search.png" alt="Search"></button>
             <div class="error">
                 <p>Invalid city name</p>
             </div>
         </div>
         <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
+            <img src="images/rain.png" class="weather-icon" alt="Weather Icon">
             <h1 class="temp">22°C</h1>
             <h1 class="city">Algiers</h1>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="">
+                    <img src="images/humidity.png" alt="Humidity Icon">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity </p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="images/wind.png" alt="">
+                    <img src="images/wind.png" alt="Wind Icon">
                     <div>
                         <p class="wind">15 km/h</p>
                         <p>Wind Speed </p>
@@ -38,8 +38,6 @@
             </div>
         </div>
     </div>
-
-
     <script type="module" src="app.js"></script>
 </body>
 </html>
